# cortex-memory

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_real.py  harness.py  memory.py  pyproject.toml  requirements.txt
examples/: claude_api.py  claude_code_inject.py  demo.py  git_memory_chat.py  git_merge_driver.py
examples/claude_code_hooks/: config.json  memory.md  on_prompt.py  on_stop.py  settings.json  setup.md  statusline.py
src/cortex_memory/: __init__.py  __main__.py  cortex.py  git_sync.py  harness.py  install.py  memory.py
src/cortex_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
